chore: project in java with graalvm