@@ -1,77 +1,72 @@
+buildscript {
+  repositories {
+    mavenCentral()
+    maven { url 'https://repo.spring.io/snapshot' }
+    maven { url 'https://repo.spring.io/milestone' }
+  }
+}
+
+
 plugins {
-  id 'java'
+  id 'java-conventions'
+  id 'application'
+  id 'org.springframework.boot' version '3.3.5'
+  id 'io.spring.dependency-management' version '1.1.6'
   id 'org.graalvm.buildtools.native' version '0.10.3'
 }
 
-group = 'com.seccreto'
+group 'com.seccreto.infrastructure'
 
-repositories {
-  mavenCentral()
+java {
+  sourceCompatibility = JavaVersion.VERSION_21
+  targetCompatibility = JavaVersion.VERSION_21
 }
 
-// Define o diretório de build para todos os subprojetos
-allprojects {
-  buildDir = "$rootDir/buildSrc"
-}
-
-subprojects {
-  apply plugin: 'java'
-
-  repositories {
-    mavenCentral()
-  }
-
-  tasks.test {
-    useJUnitPlatform()
-  }
-}
-
-// Configuração específica para o subprojeto infrastructure
-project(':infrastructure') {
-  dependencies {
-    implementation project(':domain')
-    implementation project(':application')
-    implementation 'io.undertow:undertow-core:2.2.29.Final'
-
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.0'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.0'
-    testImplementation 'org.mockito:mockito-core:5.14.2'
-  }
-
-  graalvmNative {
-    binaries {
-      main {
-        mainClass = 'com.seccreto.infrastructure.Main'
-        imageName = 'pqxmp_v.0.0.1-alpha'
-
-        buildArgs.addAll([
-          '--no-fallback', // Gera apenas a imagem nativa, sem fallback para a JVM
-          '-H:+ReportExceptionStackTraces', // Relata exceções com stack traces completos
-          '-H:+PrintAnalysisCallTree', // Imprime a árvore de chamadas para análise
-          '-H:+ReportUnsupportedElementsAtRuntime', // Relata elementos não suportados em tempo de execução
-          '-H:Optimize=2', // Nível de otimização mais agressivo
-          '-H:+RemoveSaturatedTypeFlows', // Otimiza fluxos de tipos saturados
-          '-H:Log=registerResource:5', // Nível de log para recursos registrados
-          '-H:+InlineBeforeAnalysis', // Habilita inline de métodos antes da análise
-          '-H:EnableURLProtocols=http,https' // Especifica os protocolos de URL permitidos
-        ])
-
-        // Configurações avançadas de memória e GC
-        buildArgs.addAll([
-          '--gc=serial', // Usa o Serial GC (padrão na Community Edition)
-          '-H:InitialCollectionPolicy=BySpaceAndTime', // Política de coleta inicial
-          '-R:MaxHeapSize=1024m', // Tamanho máximo do heap
-          '-R:MinHeapSize=256m', // Tamanho mínimo do heap
-          '-R:MaxNewSize=128m', // Tamanho máximo da nova geração
-          '-H:ClassInitialization=com.seccreto.infrastructure.Main:build_time', // Inicializa a classe Main em tempo de compilação
-          '-H:IncludeResources=application.yml'
-        ])
-      }
+graalvmNative {
+  binaries {
+    main {
+      buildArgs.add('--enable-preview')
+      buildArgs.add('-H:+UnlockExperimentalVMOptions')
+      buildArgs.add('--no-fallback')
+      buildArgs.add('-H:+ReportExceptionStackTraces')
+      buildArgs.add('-H:+PrintAnalysisCallTree')
+      buildArgs.add('-H:+ReportUnsupportedElementsAtRuntime')
+      buildArgs.add('-H:Optimize=2')
+      buildArgs.add('-H:+RemoveSaturatedTypeFlows')
+      buildArgs.add('-H:Log=registerResource:5')
+      buildArgs.add('-H:+InlineBeforeAnalysis')
+      buildArgs.add('-H:EnableURLProtocols=http,https')
+      buildArgs.add('--gc=serial')
+      buildArgs.add('-H:InitialCollectionPolicy=BySpaceAndTime')
+      buildArgs.add('-R:MaxHeapSize=1024m')
+      buildArgs.add('-R:MinHeapSize=256m')
+      buildArgs.add('-R:MaxNewSize=128m')
+      buildArgs.add('-H:IncludeResources=application.yml')
+      buildArgs.add('--initialize-at-run-time=org.apache.commons.logging.LogFactory,org.apache.commons.logging.LogFactoryService')
+      imageName = "pqxmp_v0.0.1-alpha"
     }
   }
 }
 
-// Configura a tarefa de build para depender da compilação nativa
-tasks.named('build').configure {
-  dependsOn ':infrastructure:nativeCompile'
+bootJar {
+  archiveFileName = "application.jar"
+  destinationDirectory.set(file("${rootProject.buildDir}/libs"))
+}
+
+dependencies {
+  implementation(project(":domain"))
+  implementation(project(":application"))
+  implementation 'org.springframework.boot:spring-boot-starter-web'
+  implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+  testImplementation 'org.springframework.boot:spring-boot-starter-test'
+  testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+}
+
+tasks.named('test') {
+  useJUnitPlatform()
+}
+
+tasks.named('bootBuildImage') {
+  enabled = false
 }
